--- a/_layouts/simple.html
+++ b/_layouts/simple.html
@@ -6,6 +6,12 @@ layout: nil
 
 <html lang="{{ site.lang | default: 'en-US' }}">
 <body>
+  <aside>
+    <nav>
+      <li>as</li>
+      <li>zx</li>
+    </nav>
+  </aside>
   <div class="main" id="top">
     <div class="main-content-wrap">
       <div id="main-content" class="main-content">
