--- a/_layouts/simple.html
+++ b/_layouts/simple.html
@@ -70,6 +70,9 @@ div.content {
   <a href="index.html" {% if page.url == '/index.html' or page.url == '/' %}class="active"{% endif %}>Index</a>
   <a href="detect.html" {% if page.url == '/detect.html' %}class="active"{% endif %}>Spot a fraud</a>
   <a href="protect.html" {% if page.url == '/protect.html' %}class="active"{% endif %}>Protect yourselft</a>
+  <p>Types of Fraud</p>
+  <a padding="10px" href="pig_butchering.html" {% if page.url == '/pig_butchering.html' %}class="active"{% endif %}>Pig Butchering</a>
+  <a padding="10px" href="sextortion.html" {% if page.url == '/sextortion.html' %}class="active"{% endif %}>Sextortion</a>
 </div>
 
 <div class="content">
