--- a/_layouts/simple.html
+++ b/_layouts/simple.html
@@ -67,12 +67,13 @@ div.content {
 <body>
 
 <div class="sidebar">
-  <a href="index.html" {% if page.url == '/index.html' or page.url == '/' %}class="active"{% endif %}>Index</a>
   <a href="detect.html" {% if page.url == '/detect.html' %}class="active"{% endif %}>Spot a fraud</a>
   <a href="protect.html" {% if page.url == '/protect.html' %}class="active"{% endif %}>Protect yourselft</a>
-  <p>Types of Fraud</p>
-  <a padding="10px" href="pig_butchering.html" {% if page.url == '/pig_butchering.html' %}class="active"{% endif %}>Pig Butchering</a>
-  <a padding="10px" href="sextortion.html" {% if page.url == '/sextortion.html' %}class="active"{% endif %}>Sextortion</a>
+  <div padding="10px">
+    <p>Types of Fraud</p>
+    <a href="pig_butchering.html" {% if page.url == '/pig_butchering.html' %}class="active"{% endif %}>Pig Butchering</a>
+    <a href="sextortion.html" {% if page.url == '/sextortion.html' %}class="active"{% endif %}>Sextortion</a>
+  </div>
 </div>
 
 <div class="content">
