--- a/_layouts/simple.html
+++ b/_layouts/simple.html
@@ -40,7 +40,12 @@ body {
   background-color: #201f23;
 }
 
+.sidebar div {
+  border-top: 1px solid #44434d;
+}
+
 .sidebar div p {
+  padding-left: 17px;
   font-weight: bold;
 }
 
